--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-uglifyjs": "^0.6.2",
+    "ion-rangeslider": "^2.3.0",
     "mixitup": "^3.3.1",
     "normalize.css": "^8.0.1",
     "slick-carousel": "^1.8.1",
     "uglifyjs": "^2.4.11"
   },
-  "dependencies": {}
+  "dependencies": {
+    "jquery-form-styler": "^2.0.2"
+  }
 }
